<resources>
    <string name="app_name">VisitApp</string>
    <string name="login_top_illustration">login_top_illustration</string>
    <string name="login_bottom_illustration">login_bottom_illustration</string>
    <string name="app_ver_1_0_0_20013fea6bcc820c">App Ver 1.0.0 - 20013FEA6BCC820C</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="icon_username">icon_username</string>
    <string name="icon_password">icon_password</string>
    <string name="keep_username">Keep username</string>
    <string name="icon_download">icon_download</string>
    <string name="check_update">Check Update</string>
    <string name="ic_present">ic_present</string>
    <string name="mitha_khairulnisa">Mitha Khairulnisa</string>
    <string name="main_menu">Main Menu</string>
    <string name="role">Role : {...}</string>
    <string name="nik_md00001">NIK : MD00001</string>
    <string name="kunjungan_pada_bulan_mei_2023">Kunjungan pada bulan Mei 2023</string>
    <string name="total_nstore">Total\nStore</string>
    <string name="actual_nstore">Actual\nStore</string>
    <string name="percentage">Percentage</string>
    <string name="menu">Menu</string>
    <string name="kunjungan">Kunjungan\n</string>
    <string name="target_install_ncdfdpc">Target Install\nCDFDPC</string>
    <string name="dashboard">Dashboard\n</string>
    <string name="transmission_nhistory">Transmission\nHistory</string>
    <string name="logout">Logout\n</string>
    <string name="user_a">user A</string>
    <string name="list_store">List Store</string>
    <string name="cari_toko_distributor">Cari Toko/Distributor</string>
    <string name="ic_search">ic_search</string>
    <string name="reset">Reset</string>
    <string name="ya">: Ya</string>
    <string name="e_merchandising">E-Merchandising</string>
    <string name="pareto">Pareto</string>
    <string name="ertm">ERTM</string>
    <string name="data">: {data}</string>
    <string name="sub_tipe_display">Sub Tipe Display</string>
    <string name="tipe_display">Tipe Display</string>
    <string name="tipe_outlet">Tipe Outlet</string>
    <string name="last_visit">Last Visit</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="lokasi_belum_dicheck">Lokasi Belum Dicheck</string>
    <string name="perfect_store">Perfect Store</string>
    <string name="store_ninvestment">Store\nInvestment</string>
    <string name="ringkasan_noos">Ringkasan\nOOS</string>
    <string name="sku_promo">SKUPromo\n</string>
    <string name="product_ncheck">Product\nCheck</string>
    <string name="information_n">Information\n</string>
    <string name="dashboard_store">Dashboard Store</string>
    <string name="selesai">Selesai</string>
    <string name="sa123123">SA123123</string>
    <string name="indomaret_aplafsa">Indomaret Aplafsa</string>
    <string name="cluster_small">Cluster : Small</string>
    <string name="tt_regular_ertm_big_pareto">TT Regular - ERTM Big - Pareto</string>
    <string name="toko_b">Toko B</string>
    <string name="jalan_pal_merah_n0_25_jakarta_barat">Jalan Pal Merah N0 25 Jakarta Barat</string>
    <string name="_25_06_2023">25-06-2023</string>
    <string name="osa">OSA</string>
    <string name="september_2023">September 2023</string>
    <string name="_100">100%</string>
    <string name="target">Target</string>
    <string name="_40">40</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="_60">60</string>
</resources>