<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_login_top_illustration"
        android:contentDescription="@string/login_top_illustration"/>

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="3dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ic_borderbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_password">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_username"
            android:contentDescription="@string/icon_username" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:focusable="true"
            android:inputType="text"
            android:textColor="#7E7E7E"
            android:textColorHint="#7E7E7E"
            android:hint="@string/username"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="3dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ic_borderbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_password"
            android:contentDescription="@string/icon_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:textColor="#7E7E7E"
            android:textColorHint="#7E7E7E"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:buttonTint="@color/main"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_username"
        android:textSize="12sp"
        android:textColor="@color/main"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"/>

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_download"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        android:contentDescription="@string/icon_download"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintEnd_toStartOf="@+id/tv_checkUpdate" />

    <TextView
        android:id="@+id/tv_checkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_update"
        android:textSize="12sp"
        android:textColor="@color/main"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="8dp"
        android:textSize="20sp"
        android:shadowRadius="8"
        android:elevation="10dp"
        android:text="@string/login"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/main"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/tv_appVersion"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/app_ver_1_0_0_20013fea6bcc820c"
        app:layout_constraintBottom_toTopOf="@+id/iv_bottomIllustration"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bottomIllustration"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_login_bottom_illustration"
        android:contentDescription="@string/login_bottom_illustration"/>

</androidx.constraintlayout.widget.ConstraintLayout>