<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storelist.presentation.StorelistActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/img_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@android:color/transparent"/>

    <TextView
        android:id="@+id/tv_listStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_store"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:layout_marginBottom="-25dp"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintBottom_toTopOf="@id/img_back"/>

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_a"
        android:textSize="11sp"
        android:layout_marginTop="-7dp"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toBottomOf="@id/tv_listStore"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_transmission"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:src="@drawable/ic_btn_transmission"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ic_borderbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/ic_search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:textColor="#7E7E7E"
            android:textColorHint="#7E7E7E"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/cari_toko_distributor"
            android:autofillHints="" />
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/ll_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/tv_titleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/map_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="30dp"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleList"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_store" />


</androidx.constraintlayout.widget.ConstraintLayout>